5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1712_2499.log
== TEST (2019-05-13 15:17:13) 
-- CODE:
from math import*

k = float(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:18:40) 
-- CODE:
from math import*

k = float(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x / factorial(x)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:18:54) 
-- CODE:
from math import*

k = float(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = 1 / factorial(x)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:19:55) 
-- CODE:
from math import*

k = float(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x = x / factorial(x)
	i = i + 1

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:20:22) 
-- CODE:
from math import*

k = float(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x = x / factorial(x)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:26:42) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  x / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:27:09) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  1 / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:27:18) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  1 / factorial(x)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:27:26) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  1 / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:33:58) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
i = 0

while(i < k):
	x =  1 / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:34:06) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
i = 0

while(i < k):
	x =  1 / factorial(i)
	i = i + 1
print(round(i, 8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:40:46) 
-- CODE:


k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  x / math.factorial(i)
	i = i + 1
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x =  x / math.factorial(i)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:41:27) 
-- CODE:


k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  x / math.factorial(x)
	i = i + 1
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x =  x / math.factorial(x)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:43:24) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x =  x + x / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
7.36264226
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:43:40) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x =  x / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
4e-08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:44:18) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x =  x + x / factorial(x)
	i = i + 1
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x =  x + x / factorial(x)
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:44:24) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x =  x + x / factorial(i)
	i = i + 1
print(round(x, 8))
-- OUTPUT:
7.36264226
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:44:51) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x =  x + x / factorial(i)
	i = i + 1
   print(round(x, 8))
-- ERROR:
File "XXXX", line 10
    print(round(x, 8))
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:44:59) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 1
i = 0

while(i < k):
	x =  x + x / factorial(i)
	i = i + 1
	print(round(x, 8))
-- OUTPUT:
2.0
4.0
6.0
7.0
7.29166667
7.35243056
7.36264226
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:45:18) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =  x + x / factorial(i)
	i = i + 1
	
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:47:37) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x =x + x / factorial(i)
	i = i + 1
	
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:01) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x + x / factorial(i)
	i = i + 1
	
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:10) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x + x/factorial(i)
	i = i + 1
	
print(round(x, 8))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:40) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x + 1/factorial(i)
	i = i + 1
	
print(round(x, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:43) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x + 1/factorial(i)
	i = i + 1
	
print(round(x, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:49:51) 
-- CODE:
from math import*

k = int(input("Insira um numero: "))
x = 0
i = 0

while(i < k):
	x = x + 1/factorial(i)
	i = i + 1
	
print(round(x, 8))
-- EXECUTION TIME:
0.180255
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
